Fixed Li element Spacing

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
-:root{
-    --required : 6px solid #9c2c13;
-    --input-border : solid 1px grey;
-    --valid : 6px solid green;
+:root {
+    --required: 6px solid #9c2c13;
+    --input-border: solid 1px grey;
+    --valid: 6px solid green;
 }
 
 body {
@@ -35,7 +35,7 @@ nav svg path {
 }
 
 #menu {
-    display:block;
+    display: block;
 }
 
 header {
@@ -94,6 +94,7 @@ main h2 {
 
 .card li {
     list-style: none;
+    padding: 0.5rem;
 }
 
 .card h3 {
@@ -122,19 +123,19 @@ main h2 {
 }
 
 footer {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        background-color: rgb(0, 64, 85);
-        color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(0, 64, 85);
+    color: #fff;
 }
 
 .highlight {
     color: rgb(191, 208, 0);
 }
 
-#lastModified{
+#lastModified {
     font-size: 0.8rem;
 }
 
@@ -142,13 +143,13 @@ footer {
     display: none;
 }
 
-#hero img{
+#hero img {
     width: 100%;
     height: auto;
 }
 
 #hero-content {
-    color:#fff;
+    color: #fff;
     position: absolute;
     top: 40%;
     left: 20%;
@@ -163,24 +164,24 @@ form fieldset {
     border: 1px solid #445ba9;
     padding: 0.5rem;
     border-radius: 10px;
-  }
-  
-  form legend {
+}
+
+form legend {
     color: #445ba9;
     margin: 0 1rem;
     padding: 0 0.5rem;
-  }
-  
-  form label.top,
-  form div {
+}
+
+form label.top,
+form div {
     display: block;
     padding-top: 1rem;
     color: red;
     font-size: 0.8rem;
-  }
-  
-  form label.top input,
-  form label.top select {
+}
+
+form label.top input,
+form label.top select {
     --webkit-appearance: none;
     display: block;
     font-size: 1rem;
@@ -189,73 +190,70 @@ form fieldset {
     padding: 0.75rem;
     color: #555;
     background-color: rgba(0, 0, 0, 0.1);
-  }
-  
-  form label.sbs {
+}
+
+form label.sbs {
     display: block;
     padding: 0.75rem 0;
     color: #555;
-  }
-  
-  form input.submitBtn {
+}
+
+form input.submitBtn {
     border: none;
     background-color: #9c2c13;
     color: #fff;
     border-radius: 1rem;
     padding: 0.75rem;
     margin-top: 10px;
-    width: 96%; 
-   max-width: 20rem;
-  }
+    width: 96%;
+    max-width: 20rem;
+}
 
-  .ratingLabels{
+.ratingLabels {
     display: flex;
     justify-content: space-between;
     padding-top: 0;
     color: #555;
     max-width: 20rem;
-    width: 90%; 
-  }
-  
-  form label.top input:required {
-    border-left: var(--required)
-  }
-  
-  form label.top input:required:valid {
-    border-left: var(--valid)
-  }
+    width: 90%;
+}
 
-  #formResponse table
-  {
+form label.top input:required {
+    border-left: var(--required)
+}
+
+form label.top input:required:valid {
+    border-left: var(--valid)
+}
+
+#formResponse table {
     margin-top: 1rem;
     border: 1px solid black;
     border-collapse: collapse;
     width: 100%;
-  }
+}
 
-    #formResponse th, td
-    {
-        border: 1px solid black;
-        padding: 5px;
-    }
+#formResponse th,
+td {
+    border: 1px solid black;
+    padding: 5px;
+}
 
 /* Table Heading Top */
 
-#formResponse th
-{
+#formResponse th {
     background-color: #9c2c13;
     color: white;
 }
 
 /* Apply zebra effect to table */
 
-#formResponse tr:nth-child(even)
-{
+#formResponse tr:nth-child(even) {
     background-color: #8b8b8b7b;
 }
 
-.red-rating{
+.red-rating {
     background-color: rgb(255, 118, 118) !important;
 
-    
+
 }
